# skytemple-plugin-backups

./: .gitignore  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: lints.yml
skytemple_example_plugin/: module.py  util.py
skytemple_example_plugin/data/widget/: monster_spawns.ui
skytemple_example_plugin/widget/: monster_spawns.py
skytemple_plugin_backups/: module.py  util.py
skytemple_plugin_backups/widget/: dialog.py  settings_manager.py
